Changed to brown background

--- a/css/app.scss
+++ b/css/app.scss
@@ -3,7 +3,7 @@
 @import "typography";
 
 // Constants
-$primary-colour: blue;
+$primary-colour: rgb(172, 110, 16);
 $body-font: "Jost";
 $body-size: 24px;
 $mq-large: 800px;
