--- a/app.css
+++ b/app.css
@@ -69,7 +69,7 @@ input, textarea, select {
   src: url(fonts/jost-book.woff), url(fonts/jost-book.woff2);
 }
 body {
-  background-color: blue;
+  background-color: rgb(172, 110, 16);
   color: #ffffff;
   font-family: "Jost";
   line-height: 1.5;
